tests/bad/lexer1.oc
/// fail: Cannot use type `bool` as an expression

def main() {
    let x: i32 = bool
}
